--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,8 @@ table {
   border-spacing: 0; }
 
 html {
-  height: 100%; }
+  height: 100%;
+  margin: 0; }
 
 .container {
   height: 100%; }
@@ -91,6 +92,7 @@ body {
   margin-left: 0; }
   .nav ul li {
     border-radius: 10px;
+    margin-top: 10px;
     display: block;
     padding: 20px;
     transition: ease 0.3s all; }
@@ -99,6 +101,12 @@ body {
       .nav ul li:hover a {
         color: #fff; }
       .nav ul li:hover i {
+        color: #fff !important; }
+    .nav ul li.active {
+      background-color: #F62459; }
+      .nav ul li.active a {
+        color: #fff; }
+      .nav ul li.active i {
         color: #fff !important; }
     .nav ul li a {
       color: #6C7A89;
@@ -115,6 +123,9 @@ body {
           color: #BF55EC; }
         .nav ul li a i.blue {
           color: #19B5FE; }
+
+a {
+  cursor: pointer; }
 
 .padding {
   padding: 30px; }
@@ -160,11 +171,25 @@ body {
       color: #F62459;
       transition: ease 0.3s all; }
 
+.panel-box {
+  width: 100%;
+  padding: 20px;
+  position: relative; }
+
 .panel {
   background-color: #fff;
+  position: absolute;
   padding: 20px;
+  width: 80%;
+  z-index: 1000;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s linear;
   border-radius: 10px;
   box-shadow: -14px 19px 50px 0 rgba(0, 0, 0, 0.2); }
+  .panel.active {
+    visibility: visible;
+    opacity: 1; }
   .panel .panel-title {
     text-align: center;
     font-size: 18px;
@@ -173,3 +198,49 @@ body {
     padding: 20px; }
     .panel .panel-body p {
       text-align: center; }
+
+.timeline ul li {
+  list-style-type: none;
+  position: relative;
+  width: 6px;
+  margin: 0 auto;
+  padding-top: 50px;
+  background: #F62459; }
+  .timeline ul li:after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: inherit; }
+  .timeline ul li div {
+    position: relative;
+    bottom: 0;
+    color: #fff;
+    width: 180px;
+    padding: 15px;
+    background: #F45B69; }
+    .timeline ul li div:after {
+      content: '';
+      position: absolute;
+      bottom: 7px;
+      width: 0;
+      height: 0;
+      border-style: solid; }
+    .timeline ul li div .info {
+      font-size: 12px; }
+  .timeline ul li:nth-child(odd) div {
+    left: 45px; }
+  .timeline ul li:nth-child(odd) div::before {
+    left: -15px;
+    border-width: 8px 16px 8px 0;
+    border-color: transparent #F45B69 transparent transparent; }
+  .timeline ul li:nth-child(even) div {
+    left: -249px; }
+  .timeline ul li:nth-child(even) div::before {
+    right: -15px;
+    border-width: 8px 0 8px 16px;
+    border-color: transparent transparent transparent #F45B69; }
