--- a/wedding2/css/idy_style.css
+++ b/wedding2/css/idy_style.css
@@ -20,11 +20,11 @@
   04.3 Countdown
   04.4 Round Animation
   04.5 Gallery
-05. Content  
+05. Content
   05.1 Social Btns
   05.2 Sidebar
   05.3 Blog
-06. Responsive 
+06. Responsive
   06.1 Intro
   06.2 Main Styles
   06.3 Countdowns
@@ -46,11 +46,11 @@ body {
   padding: 0;
   min-height: 100%;
   background-color: #f2f2f2;
-  color: #808080; 
+  color: #808080;
 }
 
 a, a:hover, a:focus, a:active {
-  color: #333; 
+  color: #333;
   text-decoration: none;
 }
 
@@ -110,7 +110,7 @@ html {
 /*01.2 Typo*/
 h1 {
   font: 400 50px/60px Unica One!important;
-  margin: 0!important; 
+  margin: 0!important;
   position: relative;
 }
 
@@ -164,7 +164,7 @@ h2:after {
   }
 h3 {
   font: 400 45px/55px Unica One;
-  margin: 0; 
+  margin: 0;
   color: #333;
 }
 .idy_white_txt h3,
@@ -175,7 +175,7 @@ h3 {
 
 .idy_subtitle {
   font: italic 400 24px/22px Vollkorn, sans-serif;
-  margin: 0 0 40px; 
+  margin: 0 0 40px;
   color: #A6A6A6;
 }
 
@@ -187,7 +187,7 @@ h3 {
 }
 
 p {
-  max-width: 600px; 
+  max-width: 600px;
 }
 .idy_simple_page p {
   max-width: 100%;
@@ -220,7 +220,7 @@ h1.entry-title {
 }
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
   padding-left: 20px;
-  padding-right: 20px; 
+  padding-right: 20px;
 }
 .page-content, .entry-content, .entry-summary {
   margin: 0!important;
@@ -273,8 +273,8 @@ h1.entry-title {
 
 @media (min-width: 1200px) {
   .container {
-    width: 994px; 
-  } 
+    width: 994px;
+  }
 }
 .btn, input[type="submit"], .btn:focus, .woocommerce button.button, .button {
   color: #fff!important;
@@ -332,7 +332,7 @@ input[type="search"] {
 }
 
 .woocommerce table.shop_table th,
-.woocommerce table.shop_table tr, 
+.woocommerce table.shop_table tr,
 .woocommerce table.shop_table tbody th, .woocommerce table.shop_table tfoot td, .woocommerce table.shop_table tfoot th{
   font-weight: normal;
 }
@@ -447,7 +447,7 @@ dd {
 
 /*01.4 Sections*/
 section.idy_box {
-  padding: 100px 0; 
+  padding: 100px 0;
   overflow: hidden;
   position: relative;
   -webkit-background-size: cover;
@@ -526,7 +526,7 @@ section.idy_box_full {
       font: 400 30px/30px Unica One;
       position: relative;
     }
-  
+
 
 .idy_heart_small {
   width: 60px;
@@ -550,7 +550,7 @@ section.idy_box_full {
     -o-transition: all 1s;
     transition: all 1s;
   }
-    
+
 .idy_heart_letters {
   color: #fff;
   position: absolute;
@@ -563,7 +563,7 @@ section.idy_box_full {
   .idy_heart_letters span {
     margin-right: 20px;
   }
-  
+
 .idy_heart_posa {
   position: absolute;
   bottom: 70px;
@@ -595,7 +595,7 @@ section.idy_box_full {
     -webkit-animation: heartBeatInner 1s infinite ease;
     animation: heartBeatInner 1s infinite ease;
     -webkit-transition: all 1000ms;
-    transition: all 1000ms;    
+    transition: all 1000ms;
 }
 .idy_page_fl_blue .idy_heart:after {
   background-color: #03A4C5;
@@ -743,7 +743,7 @@ section.idy_box_full {
 
 .idy_intro {
   height: 100vh;
-  position: relative; 
+  position: relative;
   overflow: hidden;
 }
 .idy_intro .idy_intro_scroll {
@@ -765,7 +765,7 @@ section.idy_box_full {
   z-index: 0; }
 
 .idy_intro_img {
-  text-align: center; 
+  text-align: center;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -784,7 +784,7 @@ section.idy_box_full {
 .idy_intro_back_img {
   position: absolute;
   width: 100%;
-  height: 100%; 
+  height: 100%;
   background-repeat: repeat!important;
 }
 
@@ -796,7 +796,7 @@ section.idy_box_full {
 .idy_image_bck {
   background-size: cover;
   background-repeat: no-repeat;
-  position: relative; 
+  position: relative;
   background-position: center 0;
 }
 .idy_footer_image {
@@ -826,7 +826,7 @@ section.idy_box_full {
   z-index: 1; }
 
 .idy_intro_item.image_bck {
-  background-size: 100% !important; 
+  background-size: 100% !important;
 }
 .idy_intro_item .idy_countdown {
   mix-blend-mode: overlay;
@@ -846,7 +846,7 @@ section.idy_box_full {
 
 .idy_intro_item {
   width: 100%;
-  height: 100%; 
+  height: 100%;
   overflow: hidden;
 }
 
@@ -856,7 +856,7 @@ section.idy_box_full {
   height: 100%;
   text-align: center;
   position: absolute;
-  top: 0; 
+  top: 0;
 }
 
 .idy_intro_title {
@@ -880,7 +880,7 @@ section.idy_box_full {
 .idy_intro_logo_cont {
   font: 300 60px/50px Unica One;
   position: absolute;
-  width: 150px; 
+  width: 150px;
   text-align: left;
   bottom: 240px;
   left: 50%;
@@ -954,7 +954,7 @@ section.idy_box_full {
 .idy_intro_scroll {
   font: 100 12px/18px Vollkorn, sans-serif;
   width: 100%;
-  display: block; 
+  display: block;
 }
 
 .mobile.landscape .idy_intro_scroll {
@@ -966,7 +966,7 @@ section.idy_box_full {
     height: 40px;
     border: 1px solid rgba(255, 255, 255, 0.5);
     border-radius: 15px;
-    position: relative; 
+    position: relative;
   }
     .idy_intro_scroll span:before {
       width: 2px;
@@ -982,7 +982,7 @@ section.idy_box_full {
       -moz-animation: 2s ease infinite mouse-down;
       -ms-animation: 2s ease infinite mouse-down;
       -o-animation: 2s ease infinite mouse-down;
-      animation: 2s ease infinite mouse-down; 
+      animation: 2s ease infinite mouse-down;
     }
 
 @-webkit-keyframes mouse-down {
@@ -1023,7 +1023,7 @@ section.idy_box_full {
 
 .content {
   z-index: 1;
-  position: relative;  
+  position: relative;
 }
 
 .idy_bokeh {
@@ -1032,7 +1032,7 @@ section.idy_box_full {
   height: 100%;
   background-size: cover;
   z-index: 4;
-  opacity: 0.2; 
+  opacity: 0.2;
 }
 
 .idy_rotated_title {
@@ -1062,6 +1062,7 @@ section.idy_box_full {
   bottom: 100px;
   z-index: 5;
   left: 50%;
+  top :90px;
   transform:translateX(-50%);
   text-align: center;
   color: #fff;
@@ -1301,7 +1302,7 @@ section.idy_box_full {
   display: block;
 }
   .idy_sm_lettering span {
-    
+
     margin: 0 0 0 -2px;
   }
 
@@ -1365,7 +1366,7 @@ section.idy_box_full {
   z-index: 2;
   width: 100%;
   height: 100%;
-  overflow: hidden; 
+  overflow: hidden;
 }
 
 /* line 8, ../_scss/perspectiveRules.scss */
@@ -1573,7 +1574,7 @@ section.idy_box_full {
   position: fixed;
   z-index: 10;
   width: 100%;
-  top: 0;  
+  top: 0;
 }
 .idy_header_menu {
   position: absolute;
@@ -1607,7 +1608,7 @@ section.idy_box_full {
     opacity: 0.9;
   }
   .idy_header a {
-    
+
   }
 .idy_top_menu {
   height: 60px;
@@ -1849,16 +1850,16 @@ section.idy_box_full {
   }
   .idy_page_fl_yellow .idy_mobile_menu_bg1 {
     background: #EA3621;
-  } 
+  }
   .idy_page_fl_yellow_light .idy_mobile_menu_bg1 {
     background: #efd01d;
-  } 
+  }
   .idy_page_fl_pink .idy_mobile_menu_bg1 {
     background: #8f0257;
   }
   .idy_page_fl_green .idy_mobile_menu_bg1 {
     background: #abe144;
-  } 
+  }
     .idy_mobile_menu_content_open .idy_mobile_menu_bg1 {
       left: 20%;
     }
@@ -1977,8 +1978,8 @@ section.idy_box_full {
     .idy_mobile_menu_content_open .idy_mobile_menu_bg4 {
       left: 50%;
     }
-.idy_mobile_menu_bg1, 
-.idy_mobile_menu_bg2, 
+.idy_mobile_menu_bg1,
+.idy_mobile_menu_bg2,
 .idy_mobile_menu_bg3,
 .idy_mobile_menu_bg4 {
   display: block;
@@ -2294,7 +2295,7 @@ section.idy_box_full {
 .tablet .idy_about_3d .idy_about_photo_b,
 .mobile .idy_about_3d .idy_about_photo_b {
   opacity: 0.1;
-} 
+}
 .idy_idylle_block h3 {
   border-top:2px solid #888a8c;
   border-bottom:2px solid #888a8c;
@@ -2448,11 +2449,11 @@ section.idy_box_full {
     position: relative;
     background: #999;
     margin-top: -15px;
-    margin: 20px auto;         
+    margin: 20px auto;
   }
   .idy_white_txt .idy_about_text:before {
-    background: #fff; 
-    opacity: 0.5;       
+    background: #fff;
+    opacity: 0.5;
   }
 
 .idy_about_3d {
@@ -2559,7 +2560,7 @@ section.idy_box_full {
     margin: 139px 0 0 -35px;
     opacity: 1;
   }
-  
+
 
   .idy_ab_round:after {
     display: block;
@@ -2620,8 +2621,8 @@ section.idy_box_full {
   }
 
 /*About Slider*/
-.idy_ab_slider, 
-.idy_ab_slider .owl-stage, 
+.idy_ab_slider,
+.idy_ab_slider .owl-stage,
 .idy_ab_slider .owl-stage-outer,
 .idy_ab_slider .owl-item
  {
@@ -2656,7 +2657,7 @@ section.idy_box_full {
     position: absolute;
     border-radius:50%;
   }
-  
+
 /*04.2 Image Bottom*/
 .idy_image_bottom {
   text-align: center;
@@ -2761,10 +2762,10 @@ section.idy_box_full {
 }
 .idy_page_fl_blue .idy_image_bottom:after {
   background: #03A4C5;
-} 
+}
 .idy_page_fl_yellow .idy_image_bottom:after {
   background: #EA3621;
-} 
+}
 .idy_page_fl_yellow_light .idy_image_bottom:after {
   background: #efd01d;
 }
@@ -2943,7 +2944,7 @@ section.idy_box_full {
         opacity: 1;
       }
 
-    
+
 /*04.6 Contact Image*/
 .idy_contact_image {
   width: 130%;
@@ -2972,7 +2973,7 @@ section.idy_box_full {
     position: absolute;
     bottom: 70px;
   }
- 
+
 
 .contact-form {
   width: 100%;
@@ -2986,7 +2987,7 @@ section.idy_box_full {
   margin-top: 150px;
   min-height: 300px;
 }
-.contact-form input[type="text"], 
+.contact-form input[type="text"],
 .contact-form textarea {
   color: #888a8c;
 }
@@ -2998,7 +2999,7 @@ section.idy_box_full {
   .wrap-forms .field-textarea textarea {
     height: 80px;
   }
-  .field-text label, 
+  .field-text label,
   .field-textarea label,
   .field-checkbox label {
     font:italic 400 18px/24px Vollkorn;
@@ -3027,7 +3028,7 @@ section.idy_box_full {
   }
   .idy_social_btns:hover i {
     color: #EC0201;
-    
+
   }
   .idy_page_fl_blue .idy_social_btns:hover i {
     color: #03A4C5;
@@ -3211,8 +3212,8 @@ article.post {
 
 }
 @media (max-width:769px){
-  
-  .idy_mobile_menu_bg2, 
+
+  .idy_mobile_menu_bg2,
   .idy_mobile_menu_bg3,
   .idy_mobile_menu_bg4 {
     display: none;
@@ -3241,20 +3242,20 @@ article.post {
   .idy_mobile_menu_content_open .idy_mobile_menu_bg1 {
     left: 0;
   }
-  
+
   .contact-form {
     transform:rotate(0);
   }
-  .idy_mobile_menu_bg2, 
-  .idy_mobile_menu_bg3, 
+  .idy_mobile_menu_bg2,
+  .idy_mobile_menu_bg3,
   .idy_mobile_menu_bg4 {
     display: none;
   }
-  
+
   .idy_mobile_menu_content {
     left: -100%;
   }
-  
+
 }
 
 @media (max-width:480px){
@@ -3295,12 +3296,12 @@ article.post {
     margin-top: 30px;
   }
 
-  .idy_about .idy_text_left,  
+  .idy_about .idy_text_left,
   .idy_about .idy_text_right {
     text-align: center;
   }
 
-  
+
  .idy_ab_and {
     display: none;
   }
@@ -3349,7 +3350,7 @@ article.post {
     width: 10px;
     margin: 32px 0 0 3px;
   }
-  
+
 }
 
 
@@ -3371,7 +3372,7 @@ h1.idy_lettering {
     width: 25%;
     text-align: center;
     text-transform: uppercase;
-    display: inline-block;  
+    display: inline-block;
   }
 .entry-header {
   color: #636363;
@@ -3380,11 +3381,11 @@ h1.idy_lettering {
 .mobile .idy_sidebar {
   display: none;
 }
-.tablet.portrait .idy_header .idy_mobile_menu, .tablet.portrait .idy_header .idy_mobile_menu_content, 
+.tablet.portrait .idy_header .idy_mobile_menu, .tablet.portrait .idy_header .idy_mobile_menu_content,
 .mobile .idy_header .idy_mobile_menu, .mobile .idy_header .idy_mobile_menu_content {
   display: block;
 }
-.mobile .idy_top_menu, .tablet.portrait .idy_top_menu, 
+.mobile .idy_top_menu, .tablet.portrait .idy_top_menu,
 .mobile .idy_header:after, .tablet.portrait .idy_header:after {
   display: none;
 }
@@ -3428,4 +3429,18 @@ h1.idy_lettering {
 /*06.8 Big Screens 3D*/
 @media (min-width:1400px){
 
+}
+@media (max-width: 768px) {
+  .idy_box  .idy_white_txt {
+    background-image:url(img/content/center2.jpg);
+  }
+}
+@media (min-width: 770px) {
+  .idy_box  .idy_white_txt {
+    background-image:url(img/content/center.jpg);
+  }
+}
+@media (min-width: 1200px) {
+  .fw-container {
+  }
 }
